# tech_challenge_fase3

./: LICENSE  README.md  SWAGGER.MD  coletar_dados.ipynb  git_commit_all.py  main.py  model_pipeline.ipynb  pyproject.toml
app/core/: config.py  fast_alerts.py  path.py  templates.py
app/routers/api/: pred.py
app/routers/pages/: index.py
app/schemas/ml/: __init__.py  pred.py  validators.py
app/static/css/: bootstrap.min.css
app/static/js/: number.js
app/templates/: base.html
app/templates/index/: main.html
app/templates/index/partials/: formulario.html
data/: credit_score.csv
model_pipeline/: correlacao.csv  dashboard.py  ml.ipynb  ml_regressao.ipynb  tratamento_dados.ipynb
model_pipeline/model/: model.pkl  preprocessor.pkl
