[project]
name = "FIAP-TECH-CHALLENGE-3"
version = "2025.08.30"
description = "Coleta de dados -> criar modelo -> producao"
authors = [
    {name = "Gabriel Henrique Pascon",email = "gh.pascon@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "=3.11"
dependencies = [
    "fastapi (==0.110.0)",
    "uvicorn (==0.29.0)",
    "jinja2 (==3.1.3)",
    "python-multipart (==0.0.9)",
    "itsdangerous (==2.1.2)",
    "passlib[bcrypt] (==1.7.4)",
    "cryptography (==44.0.3)",
    "sqlalchemy (==2.0.29)",
    "pymysql (==1.1.1)",
    "aiomysql (==0.2.0)",
    "aiosqlite (==0.19.0)",
    "asyncpg (==0.29.0)",
    "aiohttp (==3.11.18)",
    "pandas (==2.2.3)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "imblearn (>=0.0,<0.1)",
    "nbformat (>=5.10.4,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

